...
                    parent: controller,
                    curve: Curves.easeIn,
                    reverseCurve: Curves.easeOut,
                  ),
                ),
                child: CartBriefUi(
                  title: "Cart",
                  onPress: onPress,
                  cartTotal: cartTotal,
                ),
              ),
            );
          }),
...
