...
                    mainAxisAlignment: MainAxisAlignment.end,
                    children: [
                      const _PaymentMethods(),
                      CartBriefUi(
                        onPress: () => initiatePayment(context),
                        cartTotal: cartProvider.getTotal().toString(),
                        title: "Pay",
                      ),
                    ],
                  ),
                ),
              ),
            ],
...
